# ChaRUSTer

./: .gitignore  Cargo.toml  README.md
resources/: adjectives  config.toml  country_cities  hobbies  levels_stats  names  nouns  professions  properties.json  quirks
resources/test/: test_config.toml  test_dictionary  test_two_levels_dictionary.json
src/: character.rs  config.rs  dictionary.rs  generator.rs  lib.rs  main.rs
src/gen_logic/: data_generation.rs
