[package]
name = "charuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#config = "0.11"
rand = "0.8.0"
assert_matches = "1.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
dyn-clone = "1.0.4"
